--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@ input:-webkit-autofill {-webkit-text-fill-color: #333333 !important;-webkit-tran
 </style></head><body><div class="hengxing55-h"><a href="/" class="logo"></a><nav class="hengxing55-m"></nav></div><div class="main"><div class="box-over"></div><div class="box"><div class="box-content hengxing55"><h2>恒行平台网址</h2>
 		<p>恒行平台，1980 最高待遇 注册链接如下：</p>
 		<blockquote>
-			<p><a href="https://www.hengx2vip6.com/#/register/s1/guurjrj" target="_bank" rel="nofollow">打开，恒行平台最新网址</a></p>
+			<p><a href="https://www.hengx2vip6.com//s1/guurjrj"target="_bank" rel="nofollow">打开，恒行平台最新网址</a></p>
 			<p>恒行平台是猎豹集团旗下又一个平台，安全有保障！</p>
 			<p>您好！如果您已经完成了注册并遇到任何问题，可以通过平台站内联系功能寻求帮助。平台通常提供全天在线</p>
-		</blockquote>
-</div></div><div class="hengxing55"><h1>恒行平台-恒行代理主管【恒行官网招商网站】</h1><div class="hengxing55-a" id="hengxing55-a-01"></div><p>恒行平台作为一家具有悠久历史和深厚文化底蕴的企业，其成功不仅仅源于卓越的商业策略和市场洞察，更在于其独特的企业文化和价值观。本文将深入探讨恒行平台的文化底蕴，分析其如何在激烈的市场竞争中保持领先地位，并探讨其文化对企业发展的深远影响。</p>
+		</blockquote></div></div><div class="hengxing55"><h1>恒行平台-恒行代理主管【恒行官网招商网站】</h1><div class="hengxing55-a" id="hengxing55-a-01"></div><p>恒行平台作为一家具有悠久历史和深厚文化底蕴的企业，其成功不仅仅源于卓越的商业策略和市场洞察，更在于其独特的企业文化和价值观。本文将深入探讨恒行平台的文化底蕴，分析其如何在激烈的市场竞争中保持领先地位，并探讨其文化对企业发展的深远影响。</p>
 <h2>一、恒行平台的历史背景</h2>
 <h3>1.1 创立之初</h3>
 <p>恒行平台成立于20世纪初，最初是一家小型家族企业。创始人以其卓越的商业头脑和坚定的信念，带领企业在激烈的市场竞争中脱颖而出。恒行平台的创立初衷是为了提供高质量的产品和服务，满足客户的需求，同时为社会创造价值。</p>
